# winlator

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/winlator/: ICmdEntryInterface.aidl
app/src/main/assets/box86_64/: box64-0.3.8-81c56d7.tzst
app/src/main/assets/box86_64/rcfiles/: box86_64rc-1.rcp  box86_64rc-2.rcp  default.box64rc
app/src/main/assets/dxwrapper/: dgVoodoo-2.75-d3d.tzst  dxvk-1.10.1-async.tzst  dxvk-1.10.3-async.tzst
app/src/main/assets/graphics_driver/: freedreno-26.0.0.tzst  llvmpipe-26.0.0.tzst  turnip-26.0.0.tzst  virgl-23.1.9.tzst  vortek-2.0.tzst  vortek-2.1.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/winlator/: xconnector_epoll.c
app/src/main/cpp/winlator/include/: time_utils.h
app/src/main/java/com/winlator/: AdrenotoolsFragment.java  CmdEntryPoint.java  ContainerDetailFragment.java  ContainersFragment.java  LorieView.java  MainActivity.java  SettingsFragment.java  ShortcutsFragment.java  (+2 more)
app/src/main/res/layout/: adrenotools_fragment.xml  adrenotools_list_item.xml  container_detail_fragment.xml  dxvk_vkd3d_config_dialog.xml  frame_generation_layout.xml  frame_rating.xml  freedreno_config_dialog.xml  screen_effect_dialog.xml  settings_fragment.xml  shortcut_settings_dialog.xml  task_manager_panel.xml  turnip_config_dialog.xml  virgl_config_dialog.xml  vortek_config_dialog.xml  x11_activity.xml
app/src/main/res/menu/: main_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-ru/: strings.xml
(+66 files in other folders)
